# TomerK_Parsing_zipmec_eu

./: cairo-3a.html  cards2.html  cards_Nursery.html  cards_Producer.html  data_cards_Exporter.csv  data_cards_Nursery.csv  data_cards_Nursery_set_50.csv  data_cards_Producer.csv  dowloand_all_exporter.py  dowloand_all_nursery.py  main.py  main_1.py  main_Exporter.py  main_Producer.py  main_nursary.py  profile_company.html  pyproject.toml
countrys/: country_1.html  country_100.html  country_101.html  country_102.html  country_103.html  country_104.html  country_105.html  country_106.html  country_107.html  country_108.html  country_109.html  country_11.html  country_111.html  country_113.html  country_114.html  country_115.html  country_116.html  country_12.html  country_124.html  country_127.html  country_129.html  country_13.html  country_130.html  country_131.html  country_132.html  country_133.html  country_135.html  country_14.html  country_141.html  country_147.html  country_16.html  country_17.html  country_18.html  country_19.html  country_20.html  country_21.html  country_22.html  country_23.html  country_24.html  country_25.html  (+53 more)
